# json2fit

./: CHANGELOG.md  LICENSE  PRIVACY.md  README.md  angular.json  ogolna_lista_sportow.tsv  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
docs/: import-polar-flow.md  import-to-garmin-connect.md
src/: .htaccess  index.html  manifest.webmanifest  styles.css  sw.js  test-setup.ts
src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
src/app/core/: app-data.service.spec.ts  app-data.service.ts  pwa.service.spec.ts  pwa.service.ts  theme.service.spec.ts  theme.service.ts
src/app/core/i18n/: i18n.model.ts  i18n.pipe.ts  i18n.service.spec.ts  i18n.service.ts  language-switcher.component.spec.ts  language-switcher.component.ts
src/app/features/beta/: beta-banner.component.ts  beta-interest-form.component.spec.ts  beta-interest-form.component.ts  beta-signal.model.ts  beta-signal.service.spec.ts  beta-signal.service.ts
src/app/features/converter/: activity-charts.component.spec.ts  activity-charts.component.ts  activity-preview.utils.spec.ts  (+25 more)
src/assets/i18n/: en.json  pl.json
tests/fixtures/: account-data-sample.json  account-profile-sample.json  activity-sample.json  invalid-json-sample.json  numeric-prefix-sample.json  training-session-sample-minimal.json  training-session-sample-with-gps-hr.json  training-session-sample-without-gps.json  unknown-sample.json
tests/python/: test_garmin_ready_validator.py  test_polar_file_classifier.py  test_polar_parser.py  test_tcx_exporter.py  test_wellness_parser.py
(+57 files in other folders)
